dripmail-sf/force-app/main/default/objects/Connection__c/Connection__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Information about the connection between client org and Emergence Drip Mail Servers</description>
    <label>Connection</label>
</CustomObject>