dripmail-sf/force-app/main/default/objects/Connection__c/fields/API_Key__c.field-meta.xml
<CustomField>
    <fullName>API_Key__c</fullName>
    <description>The unique API Key this org uses to authenticate requests to the Emergence Drip Mail Servers. This key is refreshed periodically and whenever the Connecting User is changed.</description>
    <label>API Key</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>