dripmail-sf/force-app/main/default/objects/Connection__c/fields/Connecting_User_Id__c.field-meta.xml
<CustomField>
    <fullName>Connecting_User_Id__c</fullName>
    <description>The Salesforce User Id of the User responsible for the ongoing connection between this org and Emergence Drip Mail Servers</description>
    <label>Connecting User Id</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>