dripmail-sf/force-app/main/default/objects/Connection__c/fields/Email_Sending_Status__c.field-meta.xml
<CustomField>
    <fullName>Email_Sending_Status__c</fullName>
    <defaultValue>&quot;Configuration required&quot;</defaultValue>
    <description>A value reflecting this orgs ability to send emails using Emergence Drip Mail (Enum: [Configuration required, Healthy, Under review, Sending paused]). All enum values are Server reflected with the exception of Configuration required.</description>
    <label>Email Sending Status</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>